--- a/blog/another-post.mdx
+++ b/blog/another-post.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Yet Another Post"
-date: "2021-07-25"
-slug: "yet-another-post"
+title: "Another Post"
+date: "2021-07-24"
+slug: "another-post"
 ---
 
-Wow look at all this content. How do they do it?
+Here's another post! It's even better than the first one!
